refactor(java): clean object instantiator ownership